some work on schema and authentication

--- a/danceapp/templates/event/event.html
+++ b/danceapp/templates/event/event.html
@@ -9,30 +9,34 @@
 
         <div class="col-sm-9">
 
+        {% if current_user.is_authenticated %}
+            {% if current_user.is_admin_user() or current_user.is_promoter_user() %}
 
             <form method="POST">
                 <div class="form-group">
                     <textarea name="description" class="form-control" rows="3" placeholder="Describe at will">{{ event.description }}</textarea>
                 </div>
-{##}
-{#                <div class="form-group">#}
-{#                    <select class="form-control" name="storyline_id">#}
-        {#                <option value="-1">Select a storyline</option>#}
-{#                        {% for storyline in storylines %}#}
-{#                            <option value="{{ storyline.id }}" {% if storyline.id==event.storyline_id %}selected="true"{% endif %} {{ storyline.id | is_selected }}>{{ storyline.title }}</option>#}
-{#                        {% endfor %}#}
-{#                    </select>#}
-{#                </div>#}
-{##}
-{#                <div class="form-group">#}
-{#                    <input name="occurs_percent" type="number" class="form-control" placeholder="When does this happen?" value="{{ event.event_occurs_percent }}">#}
-{#                </div>#}
-{##}
                 <button type="submit" class="btn btn-primary">Save!</button>
             </form>
+            {% else %}
+                {{ event.description }} <br/>
+                {{ event.venue.name }} <br/>
+                {{ event.date }}<br/>
+                {{ event.startat }} - {{ event.endat}}
+            {% endif %}
+        {% else %}
+            {{ event.description }} <br/>
+            {{ event.venue.name }} <br/>
+            {{ event.date }}
+        {% endif%}
 
             <br/>
 
+            <p class="lead">
+                <i>Venue:
+                    <a href="{{ url_for("venues", venue=event.venue.id) }}" >{{ event.venue.name }}</a>
+                </i>
+            </p>
             <p class="lead">
                 <i>Promoter{% if event.promoters|length>1 %}s{% endif %}:
                     {% for c in event.promoters %}<a href="{{ url_for("events", promoter_id=c.id) }}" class="color-{{ c.initials }}">{{ c.name }}</a> {% endfor %}
@@ -53,15 +57,20 @@
 {#            </div>#}
 {#        #}
 {#        #}
-            <p>Set Status:</p>
-            <div class="btn-group btn-group-vertical" role="group">
-                <a href="{{ url_for('set_status', event_id=event.id, status='one_off') }}" class="btn btn-warning">One Off</a>
-                <a href="{{ url_for('set_status', event_id=event.id, status='repeat_reg') }}" class="btn btn-primary">Regularly repeating</a>
-                <a href="{{ url_for('set_status', event_id=event.id, status='repeat_strange') }}" class="btn btn-success">Irregular</a>
-{#            </div>#}
-{#            <div class="btn-group btn-group-vertical" role="group">#}
-                <a href="{{ url_for('delete_event', event_id=event.id) }}" id="delete-event" class="btn btn-link"><span class="glyphicon glyphicon-trash"></span>Remove</a>
-            </div>
+
+            {% if current_user.is_authenticated %}
+                {% if current_user.is_admin_user() or current_user.is_promoter_user() %}
+                    <p>Set Status:</p>
+                    <div class="btn-group btn-group-vertical" role="group">
+                        <a href="{{ url_for('set_status', event_id=event.id, status='one_off') }}" class="btn btn-warning">One Off</a>
+                        <a href="{{ url_for('set_status', event_id=event.id, status='repeat_reg') }}" class="btn btn-primary">Regularly repeating</a>
+                        <a href="{{ url_for('set_status', event_id=event.id, status='repeat_strange') }}" class="btn btn-success">Irregular</a>
+        {#            </div>#}
+        {#            <div class="btn-group btn-group-vertical" role="group">#}
+                        <a href="{{ url_for('delete_event', event_id=event.id) }}" id="delete-event" class="btn btn-link"><span class="glyphicon glyphicon-trash"></span>Remove</a>
+                    </div>
+            {% endif %}
+            {% endif %}
         </div>
     </div>
 </div>
