--- a/danceapp/templates/venue/index.html
+++ b/danceapp/templates/venue/index.html
@@ -6,8 +6,11 @@
     </div>
 
     <div class="btn-group event-control" role="group">
+        {% if current_user.is_authenticated %}{% if current_user.is_admin %}
         <a href="{{ url_for('new_venue') }}" class="btn btn-link new-storyline"><span class="glyphicon glyphicon-plus"></span><span>New Venue</span></a>
         <a href="{{ url_for('new_tag') }}" class="btn btn-link new-tag"><span class="glyphicon glyphicon-plus"></span><span>New Tag</span></a>
+        {% endif %}
+        {% endif %}
     </div>
     <div class="list-group">
         {% for venue in venues %}
