--- a/danceapp/templates/event/index.html
+++ b/danceapp/templates/event/index.html
@@ -11,9 +11,9 @@
     </div>
 
 
-    {% if storyline %}
+    {% if venue %}
         <div class="well well-lg">
-            <h4>{{ storyline.title }}, <small>{{ storyline.description }}</small></h4>
+            <h4>{{ venue.name }}</h4>
             <div class="btn-group event-control" role="group">
                 <a href="{{ url_for('new_event', storyline_id=storyline.id) }}" class="btn btn-link new-item"><span class="glyphicon glyphicon-plus"></span>New Event</a>
                 <a href="{{ url_for('delete_storyline', storyline_id=storyline.id) }}" id="delete-storyline" class="btn btn-link"><span class="glyphicon glyphicon-trash"></span>Remove</a>
