model and seed and style changes (no scheme changes)

--- a/danceapp/templates/base.html
+++ b/danceapp/templates/base.html
@@ -1,3 +1,5 @@
+{% import 'layout.html' as layout with context -%}
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -96,6 +98,10 @@
                 </ul>
             </div>
         </nav>
+
+    {% block messages %}
+    {{ layout.messages() }}
+    {% endblock %}
         {% block body %}{% endblock %}
     </body>
 </html>
