--- a/danceapp/templates/event/kanban_timeline.html
+++ b/danceapp/templates/event/kanban_timeline.html
@@ -5,17 +5,23 @@
     <div class="panel-body" style="overflow: scroll">
         <div class="list-group">
             <table><tr class="timeline_line">
-            {% for event in events_by_time|sort(attribute='date') %}
+            {% for event in events_by_time %}
                 <td style="padding-right: 15px; vertical-align: top; text-align: left;"><span>
                     <a href="{{ url_for('event', event_id=event.id) }}" class="list-group-item " style="min-width:300px;">
+                    {%  for d in event.dances %}<button class="btn btn-warning">{{ d.name }}</button>{% endfor %}
 {#                    <a href="{{ url_for('event', event_id=event.id) }}" class="list-group-item  {{ promoter.style() }}" style="width:300px;">#}
             <img src="http://via.placeholder.com/300x420" style="min-width: 300px;"/>
-                    <h5>Date: {{ event.date}}</h5>
+                    <h5>{{ event.getNextDate()}}</h5>
                     <h4 class="list-group-item-heading">{{ event.title }}</h4>
                     <p class="list-group-item-text">{{ event.description[:100] }}{% if event.description|length>500 %}...{% endif %}</p>
                     <br/>
+                    <p><div>{{ event.venue.name }} </div></p>
+
 {#                    <p>{% for c in event.cast %}<span class="color-{{ c.initials }}"> <i>{{ c.initials }}</i> </span>  {% endfor %}</p>#}
-                    <p>{% for c in event.cast %}<div class="color-{{ c.initials }}" style="border-radius: 50%;width: 25px;height: 25px;background-color: #c7ddef;text-align: center; padding-top: 5px; display: inline-block">{{ c.initials }}</div>  {% endfor %}</p>
+                    <p>{% for c in event.promoters %}<div class="color-{{ c.name }}" >{{ c.name }}</div>  {% endfor %}</p>
+{#                    <p>{% for c in event.promoters %}<div class="color-{{ c.name }}" style="border-radius: 50%;width: 25px;height: 25px;background-color: #c7ddef;text-align: center; padding-top: 5px; display: inline-block">{{ c.name }}</div>  {% endfor %}</p>#}
+                    {%  for d in event.tags %}<button class="btn btn-error">{{ d.name }}</button>{% endfor %}
+
                 </a>
                 </span>
                 </td>
