--- a/danceapp/templates/event/event.html
+++ b/danceapp/templates/event/event.html
@@ -70,7 +70,7 @@
         {% if current_user.is_authenticated %}
             {% if current_user.is_admin_user() or current_user.is_promoter_user() %}
 
-            <form method="POST">
+            <form method="POST" enctype=multipart/form-data>
                 <div class="form-group">
                     <textarea name="description" class="form-control" rows="3" placeholder="Describe at will">{{ event.description }}</textarea>
                 </div>
@@ -119,6 +119,10 @@
                         {% endfor %}
                     </div>
 
+                    <div class="form-group">
+                        <input type=file name=file>
+                    </div>
+
                 <button type="submit" class="btn btn-primary">Save!</button>
             </form>
             {% else %}
@@ -150,7 +154,7 @@
                 </i>
             </p>
             <p class="lead">
-                    <img src="http://via.placeholder.com/600x840" style="min-width: 300px;"/>
+                <img src="/static/{{ event.flyerlink }}" style="max-width: 600px;"/>
             </p>
         </div>
         <div class="col-sm-3 event-control">
