fixed delete event authentication

--- a/danceapp/templates/event/event.html
+++ b/danceapp/templates/event/event.html
@@ -154,7 +154,7 @@
                 </i>
             </p>
             <p class="lead">
-                <img src="/static/{{ event.flyerlink }}" style="max-width: 600px;"/>
+                <img src="/{{ event.flyerlink }}" style="max-width: 600px;"/>
             </p>
         </div>
         <div class="col-sm-3 event-control">
